--- a/careportsapp/src/app/item-list/item-list.component.html
+++ b/careportsapp/src/app/item-list/item-list.component.html
@@ -80,6 +80,9 @@
                       <input type="text" name="item_type" formControlName="item_type" class="form-control" placeholder="Item Type" >
                     </div>
                     <div class="form-group">
+                      <input type="text" name="application_name" formControlName="application_name" class="form-control" placeholder="Application Name" >
+                    </div>
+                    <div class="form-group">
                       <input type="text" name="item_subject" formControlName="item_subject" class="form-control" placeholder="Item Subject" >
                     </div>
                     <div class="form-group">
@@ -99,6 +102,27 @@
                     </div>
                     <div class="form-group">
                       <input type="text" name="associated_item" formControlName="associated_item" class="form-control" placeholder="Associated" >
+                    </div> 
+                    <div class="form-group">
+                      <input type="text" name="aged_item" formControlName="aged_item" class="form-control" placeholder="Aged Item" >
+                    </div> 
+                    <div class="form-group">
+                      <input type="text" name="priority_item" formControlName="priority_item" class="form-control" placeholder="Priority" >
+                    </div> 
+                    <div class="form-group">
+                      <input type="text" name="bounce_item" formControlName="bounce_item" class="form-control" placeholder="Bounce" >
+                    </div> 
+                    <div class="form-group">
+                      <input type="text" name="primary_sla_breahed" formControlName="primary_sla_breahed" class="form-control" placeholder="Primary SLA" >
+                    </div>
+                    <div class="form-group">
+                      <input type="text" name="secondary_sla_breahed" formControlName="secondary_sla_breahed" class="form-control" placeholder="Secondary SLA" >
+                    </div> 
+                    <div class="form-group">
+                      <input type="text" name="tertirary_sla_breahed" formControlName="tertirary_sla_breahed" class="form-control" placeholder="Tertiry SLA" >
+                    </div> 
+                    <div class="form-group">
+                      <input type="text" name="item_resolution" formControlName="item_resolution" class="form-control" placeholder="Resoluation" >
                     </div>                 
                   
                 </div>
