--- a/careportsapp/src/app/item-list/item-list.component.html
+++ b/careportsapp/src/app/item-list/item-list.component.html
@@ -15,31 +15,27 @@
                   </div>
                   
                   <div class="col-sm-3">
+                    <form [formGroup]="itemsearchform" id="searchItem" (ngSubmit)="searchItemSubmit(searchItem)">
                     <div class="input-group">
-                      <input type="text" class="input-sm form-control" placeholder="Search">
+                       <input type="text" name="search_item_number" formControlName="search_item_number" class="input-sm form-control" placeholder="Item Number" >
                       <span class="input-group-btn">
-                        <button class="btn btn-sm btn-white" type="button">Go!</button>
+                        <button type="submit" class="btn btn-sm btn-white" >Go!</button>
+
                       </span>
                     </div>
-                    
+                  </form>
                   </div>
                 </div>
                 <div class="table-responsive">
                   <table class="table table-striped b-t text-sm">
                     <thead>
                       <tr>
-                        <th width="20" class="th-sortable" data-toggle="class">ID
-                          <span class="th-sort">
-                            <i class="fa fa-sort-down text"></i>
-                            <i class="fa fa-sort-up text-active"></i>
-                            <i class="fa fa-sort"></i>
-                          </span>
-                        </th>
-                        <th >Item Number</th>                        
+                        <th width="20" class="th-sortable" data-toggle="class">ID</th>
+                        <th>Item Number</th>                        
                         <th>Item Type</th>
                         <th>Status</th>
                         <th>Subject</th>
-                        <th>Owner</th>
+                        <th>Assigned</th>
                         <th>Open Date</th>
                         <th width="80"><span class="label pull-right">
                       <a href="#modal" data-toggle="modal" class="btn btn-xs btn-success add-item-button" data-backdrop="static" data-keyboard="false"><i class="fa fa-plus" aria-hidden="true"></i> Add</a>
@@ -53,14 +49,12 @@
                         <td>{{ itemObj.itemType }}</td>
                          <td>{{ itemObj.itemStatus }}</td>
                         <td>{{ itemObj.itemSubject }}</td>                        
-                        <td>{{ itemObj.itemOwner }}</td> 
+                        <td>{{ itemObj.itemAssigned }}</td> 
                         <td>{{ itemObj.itemCreatedDate | date:'yyyy-MM-dd hh:mm:ss'}}</td> 
-                        <td><a href="#modal" data-toggle="modal"><i class="fa fa-edit fa-lg edit-item-button" (click)="getUpdateItem(itemObj.id)"></i></a> &nbsp;<a href="javascript:void(0)"><i class="fa fa-trash-o fa-lg" (click)="getRemoveItem(itemObj.id)"></i></a></td>
-                      </tr>                 
-                     
+                        <td><a href="#modal" data-toggle="modal" data-backdrop="static" data-keyboard="false"><i class="fa fa-edit fa-lg edit-item-button" (click)="getUpdateItem(itemObj.id)"></i></a> &nbsp;<a href="javascript:void(0)"><i class="fa fa-trash-o fa-lg" (click)="getRemoveItem(itemObj.id)"></i></a></td>
+                      </tr>
                     </tbody>
                   </table>
-                  
                 </div>
                 <form [formGroup]="itemsaveform" id="saveitem" (ngSubmit)="saveAndUpdateItem(saveItem)">
                 <div class="modal fade" id="modal">
@@ -86,7 +80,7 @@
                       <input type="text" name="item_subject" formControlName="item_subject" class="form-control" placeholder="Item Subject" >
                     </div>
                     <div class="form-group">
-                      <input type="text" name="item_owner" formControlName="item_owner" class="form-control" placeholder="Working On" >
+                      <input type="text" name="item_assigned" formControlName="item_assigned" class="form-control" placeholder="Assigned to" >
                     </div>
                     <div class="form-group">
                       <input type="text" name="item_status" formControlName="item_status" class="form-control" placeholder="Status" >
@@ -102,6 +96,9 @@
                     </div>
                     <div class="form-group">
                       <input type="text" name="associated_item" formControlName="associated_item" class="form-control" placeholder="Associated" >
+                    </div>
+                    <div class="form-group" id="form-group_item_owner">
+                      <input type="text" name="item_owner" formControlName="item_owner" class="form-control" placeholder="Item Owner" >
                     </div> 
                     <div class="form-group" id="form_group_aged_item">
                       <input type="text" name="aged_item" formControlName="aged_item" class="form-control" placeholder="Aged Item" >
@@ -161,9 +158,7 @@
     <div class="spinner" [ngClass]="{ 'hidden': !loading }"></div>
     <pagination-controls (pageChange)="getPage($event)" ></pagination-controls>
 </div> 
-                    </div> 
-                      
-                    
+                    </div>
                   </div>
                 </footer>
               </section>
