--- a/careportsapp/src/assets/css/app.css
+++ b/careportsapp/src/assets/css/app.css
@@ -761,8 +761,9 @@ html.layout-box .vbox > footer {
   text-decoration: none;
 }
 .nav-brand img {
-  max-height: 20px;
-  margin-top: -7px;
+  max-height: 75px;
+  max-width: 80%;
+  margin-top: -8px;
   vertical-align: middle;
 }
 .nav-msg {
@@ -2064,7 +2065,7 @@ fieldset[disabled] .btn-gplus.active {
 }
 .bg-primary.dker,
 .bg-primary .dker {
-  background-color: #333;
+  background-color: #fff;
 }
 .bg-primary a {
   color: #eae9f2;
