--- a/careportsapp/src/app/support-active-item/support-active-item.component.css
+++ b/careportsapp/src/app/support-active-item/support-active-item.component.css
@@ -6,3 +6,22 @@
 :host /deep/ ng2-smart-table thead > tr > th > div {cursor: pointer;color: #009ECE; }
 :host /deep/ th.ng2-smart-actions a {cursor: pointer;color: #009ECE; }
 
+ /*:host /deep/ ng2-st-tbody-edit-delete {display: flex !important;
+  height: 0 !important;
+}
+
+:host /deep/ ng2-st-tbody-custom a.ng2-smart-action.ng2-smart-action-custom-custom {
+  display: inline-block;
+  width: 50px;
+  text-align: center;
+  font-size: 1.1em;
+}
+
+:host /deep/ ng2-st-tbody-custom a.ng2-smart-action.ng2-smart-action-custom-custom:hover {
+  color: #5dcfe3;
+}*/
+:host /deep/ ng2-st-tbody-edit-delete {margin: 3px;}
+:host /deep/ .ng2-smart-action-custom-custom{margin: 3px;}
+
+
+
