--- a/careportsapp/src/app/support-active-item/support-active-item.component.html
+++ b/careportsapp/src/app/support-active-item/support-active-item.component.html
@@ -12,26 +12,85 @@
                   
                 </div>
                 <div>
+                  <form [formGroup]="supitemactivityform" id="savesupitemactivity" (ngSubmit)="saveAndUpdateSupItemActivity(supItemActivity)">
                   <div class="modal fade" id="modal">
+
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                  <h4 class="modal-title">Add Item</h4>
+                  <h4 class="modal-title">Activity</h4>
                 </div>
                 <div class="modal-body">
                   <!-- <form  role="form"> -->
+                   <input type="hidden" class="form-control"  formControlName="sup_item_id">
+                    <div class="form-group">
+                      
+                      
+                    </div>       
+                  <section class="scrollable">
+                  <div class="tab-content">
+                    <div class="tab-pane active" id="activity">
+                      <section class="comment-list block">
+                  <article class="comment-item media" id="comment-form">
+                    <a class="pull-left thumb-sm avatar"><img src="assets/images/avatar.jpg" class="img-circle"></a>
+                    <section class="media-body">
+                      
+                        <div class="input-group">
+                          <input type="text" name="sup_item_activity" formControlName="sup_item_activity" class="form-control" placeholder="Input your comment here">
+                          <!-- <textarea name="sup_item_activity" formControlName="sup_item_activity" class="form-control" placeholder="Current Activity"></textarea> -->
+                          <span class="input-group-btn">
+                            <button class="btn btn-primary" type="submit">POST</button>
+                          </span>
+                        </div>
+                    </section>
+                  </article> 
+
+                  <article id="comment-id-1" class="comment-item" *ngFor="let itemActivityObj of supitemactivityList">
+                    <a class="pull-left thumb-sm avatar">
+                      <img src="assets/images/avatar.jpg" class="img-circle">
+                    </a>
+                    <span class="arrow left"></span>
+                    <section class="comment-body panel">
+                      <header class="panel-heading">
+                        <a href="#">{{currentAPO}}</a>
+                        <label class="label bg-info m-l-xs">APO</label> 
+                        <span class="text-muted m-l-sm pull-right">
+                          <i class="fa fa-clock-o"></i>
+                          {{ itemActivityObj.itemActivityDate | date:'yyyy-MM-dd hh:mm:ss'}}
+                        </span>
+                      </header>
+                      <div class="panel-body">
+                        <div>{{itemActivityObj.itemActivity}}</div>
+                        <div class="comment-action m-t-sm">
                           
+                        </div>
+                      </div>
+                    </section>
+                  </article>
+                  <!-- .comment-reply -->
                   
+                  <!-- / .comment-reply -->
+                  
+                  
+                  <!-- comment form -->
+                  
+                </section>
+                    </div>
+                    
+                    
+                  </div>
+                </section>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-white" data-dismiss="modal"  >Close</button>
                   <!-- <button type="submit" class="btn btn-info" data-loading-text="Updating..." id="itemSubmitButton">Save changes</button> -->
-                  <button type="submit" class="btn btn-info" data-loading-text="Updating..." id="itemSubmitButton">Save changes</button>
+                  <!-- <button type="submit" class="btn btn-info" data-loading-text="Updating..." id="supItemActivitySubmitButton">Save changes</button> -->
                 </div>
               </div><!-- /.modal-content -->
             </div><!-- /.modal-dialog -->
           </div>
+        </form>
                 </div>
 
                 <footer class="panel-footer">
