--- a/careportsapp/src/app/support-active-item/support-active-item.component.html
+++ b/careportsapp/src/app/support-active-item/support-active-item.component.html
@@ -20,6 +20,7 @@
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                   <h4 class="modal-title">Activity</h4>
+                  <div>Subject Here</div>
                 </div>
                 <div class="modal-body">
                   <!-- <form  role="form"> -->
@@ -68,13 +69,7 @@
                       </div>
                     </section>
                   </article>
-                  <!-- .comment-reply -->
-                  
-                  <!-- / .comment-reply -->
-                  
-                  
-                  <!-- comment form -->
-                  
+                                    
                 </section>
                     </div>
                     
@@ -84,9 +79,7 @@
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-white" data-dismiss="modal"  >Close</button>
-                  <!-- <button type="submit" class="btn btn-info" data-loading-text="Updating..." id="itemSubmitButton">Save changes</button> -->
-                  <!-- <button type="submit" class="btn btn-info" data-loading-text="Updating..." id="supItemActivitySubmitButton">Save changes</button> -->
-                </div>
+                 </div>
               </div><!-- /.modal-content -->
             </div><!-- /.modal-dialog -->
           </div>
@@ -112,3 +105,4 @@
           </div>    
                 
         </section>
+        <ngx-spinner></ngx-spinner>
