--- a/careportsapp/src/app/support-all-item/support-all-item.component.html
+++ b/careportsapp/src/app/support-all-item/support-all-item.component.html
@@ -30,13 +30,14 @@
                 <div class="row text-sm wrapper">
                   <div class="col-sm-3">
                     <div class="input-group">
-                       <input type="text" name="search_from_date"  class="input-sm form-control" placeholder="From Date" >
-                       
+                       <!-- <input type="text" name="search_from_date"  class="input-sm form-control" placeholder="From Date" > -->
+                       <p-calendar placeholder="From Date" [showIcon]="true" [showTime]="true" dateFormat="yy-mm-dd" ></p-calendar>
                     </div>
                   </div>
                   <div class="col-sm-3">
                     <div class="input-group">
-                       <input type="text" name="search_to_date" class="input-sm form-control" placeholder="To Date" >
+                       <!-- <input type="text" name="search_to_date" class="input-sm form-control" placeholder="To Date" > -->
+                       <p-calendar  [showIcon]="true" placeholder="To Date" [showTime]="true" dateFormat="yy-mm-dd" ></p-calendar>
                     </div>
                   </div>
                   <div class="col-sm-6">
@@ -115,7 +116,7 @@
                          <td>{{ itemObj.itemStatus }}</td>
                         <td>{{ itemObj.itemSubject }}</td>                        
                         <td>{{ itemObj.itemAssigned }}</td> 
-                        <td>{{ itemObj.itemCreatedDate | date:'yyyy-MM-dd hh:mm:ss'}}</td> 
+                        <td>{{ itemObj.itemCreatedDate | date:'yyyy-MM-dd HH:mm a'}}</td> 
                         <td><a href="#modal" data-toggle="modal" data-backdrop="static" data-keyboard="false"><i class="fa fa-edit fa-lg edit-item-button" (click)="getUpdateItem(itemObj.id)"></i></a> &nbsp;<a href="javascript:void(0)"><i class="fa fa-trash-o fa-lg" (click)="getRemoveItem(itemObj.id)"></i></a></td>
                       </tr>
                     </tbody>
@@ -129,65 +130,105 @@
                   <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                   <h4 class="modal-title">Add Item</h4>
                 </div>
+
                 <div class="modal-body">
-                  <!-- <form  role="form"> -->
-                    <input type="hidden" class="form-control"  formControlName="item_id">
-                    <div class="form-group">
+                  <div class="row">
+                    <div class="col-sm-12">
+                      <input type="hidden" class="form-control"  formControlName="item_id">
+                      <div class="col-sm-6" style="padding-left: 0px">
+                        <div class="form-group">
+                          <label for="exampleSelect1">Item Number</label>   
                       <input type="text" name="item_number" formControlName="item_number" class="form-control" placeholder="Item Number" >
                     </div>
                     <div class="form-group">
-                      <input type="text" name="item_type" formControlName="item_type" class="form-control" placeholder="Item Type" >
-                    </div>
-                    <div class="form-group">
-                      <input type="text" name="application_name" formControlName="application_name" class="form-control" placeholder="Application Name" >
-                    </div>
-                    <div class="form-group">
-                      <input type="text" name="item_subject" formControlName="item_subject" class="form-control" placeholder="Item Subject" >
-                    </div>
-                    <div class="form-group">
-                      <input type="text" name="item_assigned" formControlName="item_assigned" class="form-control" placeholder="Assigned to" >
-                    </div>
-                    <div class="form-group">
+                      <label for="exampleSelect1">Item Status</label>
                       <input type="text" name="item_status" formControlName="item_status" class="form-control" placeholder="Status" >
                     </div>
                     <div class="form-group">
+                      <label for="exampleSelect1">Application Name</label> 
+                      <input type="text" name="application_name" formControlName="application_name" class="form-control" placeholder="Application Name" >
+                    </div>
+                      </div>
+                      <div class="col-sm-6" style="padding-right: 0px;">
+                        <div class="form-group">
+                          <label for="exampleSelect1">Item Type</label>
+                      <input type="text" name="item_type" formControlName="item_type" class="form-control" placeholder="Item Type" >
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleSelect1">Assigned To</label>
+                      <input type="text" name="item_assigned" formControlName="item_assigned" class="form-control" placeholder="Assigned to" >
+                    </div>
+                    <div class="form-group" >
+                      <label for="exampleSelect1">Priority</label>
+                      <input type="text" name="priority_item" formControlName="priority_item" class="form-control" placeholder="Priority" >
+                    </div> 
+                      </div>
+                  <!-- <form  role="form"> -->
+                    
+                    
+                    
+                    
+                    <div class="form-group">
+                      <label for="exampleSelect1">Subject</label>
+                      <input type="text" name="item_subject" formControlName="item_subject" class="form-control" placeholder="Item Subject" >
+                    </div>
+                    
+                    
+                    <div class="form-group">
+                      <label for="exampleSelect1">Description</label>
                       <textarea name="item_description" formControlName="item_description" class="form-control" placeholder="Item Description"></textarea>
                     </div>
-                    <div class="form-group">
-                      <input type="text" name="item_created_date" formControlName="item_created_date" class="form-control" placeholder="created On" >
+                    <div class="col-sm-6" style="padding-left: 0px">
+                        <div class="form-group">
+                          <label for="exampleSelect1">Created On</label>
+                      <!-- <input type="text" name="item_created_date" formControlName="item_created_date" class="form-control" placeholder="created On" > -->
+                      <p-calendar placeholder="created On" [showIcon]="true" [showTime]="true" dateFormat="yy-mm-dd" formControlName="item_created_date" useUtc hourFormat="24" ></p-calendar>
                     </div>
-                    <div class="form-group" id="form_group_item_close_date">
-                      <input type="text" name="item_close_date" formControlName="item_close_date" class="form-control" placeholder="Close On" >
+                   <div class="form-group" id="form_group_item_close_date">
+                    <label for="exampleSelect1">Closed On</label>
+                      <!-- <input type="text" name="item_close_date" formControlName="item_close_date" class="form-control" placeholder="Close On" > -->
+                      <p-calendar placeholder="Close On" [showIcon]="true" [showTime]="true" dateFormat="yy-mm-dd" formControlName="item_close_date" useUtc hourFormat="24"></p-calendar>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" id="form_group_aged_item">
+                      <label for="exampleSelect1">Aged</label>
+                      <input type="text" name="aged_item" formControlName="aged_item" class="form-control" placeholder="Aged Item" >
+                    </div>
+                    <div class="form-group" id="form_group_primary_sla_breahed">
+                      <label for="exampleSelect1">Primary SLA Breach</label>
+                      <input type="text" name="primary_sla_breahed" formControlName="primary_sla_breahed" class="form-control" placeholder="Primary SLA" >
+                    </div>
+                    <div class="form-group" id="form_group_tertirary_sla_breahed">
+                      <label for="exampleSelect1">Tertiarary SLA Breach</label>
+                      <input type="text" name="tertirary_sla_breahed" formControlName="tertirary_sla_breahed" class="form-control" placeholder="Tertiry SLA" >
+                    </div> 
+                      </div>
+                      <div class="col-sm-6" style="padding-right: 0px;">
+                        <div class="form-group">
+                          <label for="exampleSelect1">Associated Item</label> 
                       <input type="text" name="associated_item" formControlName="associated_item" class="form-control" placeholder="Associated" >
                     </div>
                     <div class="form-group" id="form-group_item_owner">
+                      <label for="exampleSelect1">Item Owner</label> 
                       <input type="text" name="item_owner" formControlName="item_owner" class="form-control" placeholder="Item Owner" >
                     </div> 
-                    <div class="form-group" id="form_group_aged_item">
-                      <input type="text" name="aged_item" formControlName="aged_item" class="form-control" placeholder="Aged Item" >
-                    </div> 
-                    <div class="form-group" >
-                      <input type="text" name="priority_item" formControlName="priority_item" class="form-control" placeholder="Priority" >
-                    </div> 
                     <div class="form-group" id="form_group_bounce_item">
+                      <label for="exampleSelect1">Bounce</label> 
                       <input type="text" name="bounce_item" formControlName="bounce_item" class="form-control" placeholder="Bounce" >
-                    </div> 
-                    <div class="form-group" id="form_group_primary_sla_breahed">
-                      <input type="text" name="primary_sla_breahed" formControlName="primary_sla_breahed" class="form-control" placeholder="Primary SLA" >
                     </div>
                     <div class="form-group" id="form_group_secondary_sla_breahed">
+                      <label for="exampleSelect1">Secondary SLA Breach</label> 
                       <input type="text" name="secondary_sla_breahed" formControlName="secondary_sla_breahed" class="form-control" placeholder="Secondary SLA" >
-                    </div> 
-                    <div class="form-group" id="form_group_tertirary_sla_breahed">
-                      <input type="text" name="tertirary_sla_breahed" formControlName="tertirary_sla_breahed" class="form-control" placeholder="Tertiry SLA" >
-                    </div> 
+                    </div>
+                      </div>               
+                    
+                     
+                    
                     <div class="form-group" id="form_group_item_resolution">
                       <input type="text" name="item_resolution" formControlName="item_resolution" class="form-control" placeholder="Resoluation" >
                     </div>                 
-                  
+                  </div>
                 </div>
+              </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-white" data-dismiss="modal" (click)="addItemModalClose()" >Close</button>
                   <!-- <button type="submit" class="btn btn-info" data-loading-text="Updating..." id="itemSubmitButton">Save changes</button> -->
